--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-execute": "^0.2.2",
     "grunt-nw-builder": "latest",
+    "grunt-shell": "^2.1.0",
     "grunt-string-replace": "^1.2.1",
-    "grunt-stripcomments": "^0.6.0",
+    "grunt-stripcomments": "^0.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
